force-app/main/default/objects/Account/fields/CAZ_Capacidad_de_retiro__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Capacidad_de_retiro__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Capacidad de retiro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>