force-app/main/default/objects/Account/fields/CAZ_Correo_institucional__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Correo_institucional__c</fullName>
    <label>CAZ_Correo_institucional</label>
    <type>Email</type>
</CustomField>