force-app/main/default/objects/Account/fields/CAZ_DiasAtraso__c.field-meta.xml
<CustomField>
    <fullName>CAZ_DiasAtraso__c</fullName>
    <description>Días de atraso provenientes de la integración con JD Edwards para el cálculo de nivel de riesgo en cobranza.</description>
    <label>Días de Atraso</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>