force-app/main/default/objects/Account/fields/CAZ_Direccion_plantilla_B__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Direccion_plantilla_B__c</fullName>
    <formula>BillingStreet &amp; &apos;, &apos; &amp; 
CAZB_No_interior__c &amp; &apos;, &apos; &amp; 
CAZB_No_exterior__c &amp; &apos;, &apos; &amp; 
CAZB_Colonia__c &amp; &apos;, &apos; &amp; 
BillingPostalCode &amp; &apos;, &apos; &amp; 
CAZB_Municipio__c &amp; &apos;, &apos; &amp; 
BillingCity &amp; &apos;, &apos; &amp; 
BillingState  &amp; &apos;, &apos; &amp; 
BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAZ_Direccion_plantilla_B</label>
    <type>Text</type>
</CustomField>