force-app/main/default/objects/Account/fields/CAZ_Direccion_plantilla_S__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Direccion_plantilla_S__c</fullName>
    <formula>ShippingStreet &amp; &apos;, &apos; &amp; 
CAZS_No_interior__c &amp; &apos;, &apos; &amp; 
CAZS_No_exterior__c &amp; &apos;, &apos; &amp; 
CAZS_Colonia__c &amp; &apos;, &apos; &amp; 
ShippingPostalCode &amp; &apos;, &apos; &amp; 
CAZS_Municipio__c &amp; &apos;, &apos; &amp; 
ShippingCity &amp; &apos;, &apos; &amp; 
ShippingState  &amp; &apos;, &apos; &amp; 
ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAZ_Direccion_plantilla_S</label>
    <type>Text</type>
</CustomField>