force-app/main/default/objects/Account/fields/CAZ_Estado_de_la_peticion__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Estado_de_la_peticion__c</fullName>
    <label>Estado de la petición (Slack)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprobada</fullName>
            </value>
            <value>
                <fullName>En proceso</fullName>
                <default>true</default>
                <label>En proceso</label>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>