force-app/main/default/objects/Account/fields/CAZ_Fecha_de_solicitud__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Fecha_de_solicitud__c</fullName>
    <label>Fecha de solicitud</label>
    <type>DateTime</type>
</CustomField>