force-app/main/default/objects/Account/fields/CAZ_IdExterno__c.field-meta.xml
<CustomField>
    <fullName>CAZ_IdExterno__c</fullName>
    <externalId>true</externalId>
    <label>CAZ_IdExterno</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>