force-app/main/default/objects/Account/fields/CAZ_IdExternoCP__c.field-meta.xml
<CustomField>
    <fullName>CAZ_IdExternoCP__c</fullName>
    <inlineHelpText>Campo para recibir en el código CAZ_WS_IU_Cuentas el valor unica de la Cuenta principal asociada. No utilizar en
ningún otro lado</inlineHelpText>
    <label>CAZ_IdExternoCP</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>