force-app/main/default/objects/Account/fields/CAZ_NivelRiesgoCobranza__c.field-meta.xml
<CustomField>
    <fullName>CAZ_NivelRiesgoCobranza__c</fullName>
    <description>Calcula el Bucket de Cobranza en función de los días de atraso de la cuenta.</description>
    <formula>IF(CAZ_DiasAtraso__c &gt;= 91, &apos;Rojo&apos;,
  IF(CAZ_DiasAtraso__c &gt;= 31, &apos;Naranja&apos;,
    IF(CAZ_DiasAtraso__c &gt;= 6, &apos;Amarillo&apos;,
      IF(CAZ_DiasAtraso__c &gt;= 1, &apos;Verde&apos;, &apos;Al Corriente&apos;)
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nivel de Riesgo Cobranza</label>
    <type>Text</type>
</CustomField>