force-app/main/default/objects/Account/fields/CAZ_Usuario_activo__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Usuario_activo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Usuario activo</label>
    <type>Checkbox</type>
</CustomField>