force-app/main/default/objects/Account/fields/CAZ_Zona__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Zona__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zona</label>
    <referenceTo>CAZ_Zona__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>