force-app/main/default/objects/Account/fields/CAZB_Colonia__c.field-meta.xml
<CustomField>
    <fullName>CAZB_Colonia__c</fullName>
    <label>CAZB_Colonia</label>
    <length>80</length>
    <type>Text</type>
</CustomField>