force-app/main/default/objects/Account/fields/CAZB_Municipio__c.field-meta.xml
<CustomField>
    <fullName>CAZB_Municipio__c</fullName>
    <label>CAZB_Municipio</label>
    <length>80</length>
    <type>Text</type>
</CustomField>