force-app/main/default/objects/Account/fields/CAZB_No_interior__c.field-meta.xml
<CustomField>
    <fullName>CAZB_No_interior__c</fullName>
    <label>CAZB_No. interior</label>
    <length>10</length>
    <type>Text</type>
</CustomField>