force-app/main/default/objects/Account/fields/CAZS_Municipio__c.field-meta.xml
<CustomField>
    <fullName>CAZS_Municipio__c</fullName>
    <label>CAZS_Municipio</label>
    <length>80</length>
    <type>Text</type>
</CustomField>