force-app/main/default/objects/Account/fields/ClaveJDE__c.field-meta.xml
<CustomField>
    <fullName>ClaveJDE__c</fullName>
    <externalId>true</externalId>
    <label>Clave JDE</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>