force-app/main/default/objects/Account/recordTypes/CAZ_Informacion_competencia.recordType-meta.xml
<RecordType>
    <fullName>CAZ_Informacion_competencia</fullName>
    <active>true</active>
    <description>Registros para almacenar clientes competencia</description>
    <label>CAZ Información competencia</label>
</RecordType>