force-app/main/default/objects/Account/recordTypes/CAZ_Informacion_propia.recordType-meta.xml
<RecordType>
    <fullName>CAZ_Informacion_propia</fullName>
    <active>true</active>
    <description>Registros para almacenar clientes CAZ</description>
    <label>CAZ Información propia</label>
</RecordType>