force-app/main/default/objects/Account/validationRules/CAZ_OrigenDeLaCuenta.validationRule-meta.xml
<ValidationRule>
    <fullName>CAZ_OrigenDeLaCuenta</fullName>
    <active>true</active>
    <description>Si la información de la Cuenta no tiene como origen el WS (CAZ_WS_IU_Cuentas) se mostrara el siguiente mensaje</description>
    <errorConditionFormula>AND(
   ISNEW(),
   CAZ_Viene_de_WS__c
)</errorConditionFormula>
    <errorMessage>No se permiten crear registros de Cuentas (Distribuidor) si el origen no es por medio del servicio web</errorMessage>
</ValidationRule>