force-app/main/default/objects/Account/validationRules/Clave_JDE_soloNumeros.validationRule-meta.xml
<ValidationRule>
    <fullName>Clave_JDE_soloNumeros</fullName>
    <active>false</active>
    <description>El valor del campo Clave JDE, solo acepta números</description>
    <errorConditionFormula>NOT(REGEX(ClaveJDE__c,&apos;^[0-9]+$&apos;))</errorConditionFormula>
    <errorMessage>El valor del campo Clave JDE, solo acepta números</errorMessage>
</ValidationRule>